Quake II 4.03 to 4.04
- Change the behavior of hotkey menus to fix some
  strange bugs and memory leaks in the menu system.

Quake II 4.02 to 4.03
- Fix wrong function call in the Quake II file system.
- Fix gl_ext_multitexture set to 1. (reported by Richard Allen
  and Lukas Sabota)
- Print the version number in the window title.

Quake II 4.01 to 4.02
- Fix a linker problem manifesting only on Ubuntu.

Quake II 4.00 to 4.01
- Fix a linker problem.
- Fix a problem with displaying the version number.

Quake II 3.00 to 4.00
- A major rewrite of the savegame system.
- Add a crash handler, printing a backtrace on Linux platforms.
- Add support for system wide installations.
- ctf was moved into a separate download.
- All open bugs were fixed.
- Fix spawnpoint selection if single player maps are loaded via console.
- Rename ~/.quake2 to ~/.yq2 to ease parallel installation with other
  Quake II clients.
- The client does no longer crash if the menu is opened while connecting
  to remote server.
- The game code received a code audit and major rework.

Quake II 3.00RC2 to 3.00
- Improve compatiblity with pulseaudio (by Ozkan Sezer)

Quake II 3.00RC1 to 3.00RC2
- Many improvements to the OGG/Vorbis support. (by Ozkan Sezer)
- The map command now works even when a server is running.

Quake II 2.11 to 3.00RC1
- Complete refactoring and code audit of the client, leading
  to much cleaner and more maintainable code and improved
  stability.
- Fixed a wrong cast under linux. This could result in
  sudden crashes.
- Reworked the input system.
- Much improved console tab completion.
- Better TTY output of the startup and shutdown.
- More reliable shutdown of the client.
- Plugged a memory leak in the quake file system.
- Major rework of the sound system:
  - A lot of bugfixes for the upper layer.
  - Simplified code and removed crap from the 90ies.
  - Rewrote the low level backend from scratch.
- Major rework of the refresher: