@@ -165,6 +165,7 @@ extern int r_viewcluster, r_viewcluster2, r_oldviewcluster, r_oldviewcluster2;
 
 extern cvar_t  *gl_norefresh;
 extern cvar_t  *r_lefthand;
+extern cvar_t  *gl_farsee;
 extern cvar_t  *gl_drawentities;
 extern cvar_t  *gl_drawworld;
 extern cvar_t  *gl_speeds;
