@@ -582,9 +582,16 @@ R_MakeSkyVec ( float s, float t, int axis )
 	vec3_t v, b;
 	int j, k;
 
-	b [ 0 ] = s * 2300;
-	b [ 1 ] = t * 2300;
-	b [ 2 ] = 2300;
+	if ( gl_farsee->value == 0 ) {
+		b [ 0 ] = s * 2300;
+		b [ 1 ] = t * 2300;
+		b [ 2 ] = 2300;
+	} else {
+		b [ 0 ] = s * 4096;
+		b [ 1 ] = t * 4096;
+		b [ 2 ] = 4096;
+	}
+
 
 	for ( j = 0; j < 3; j++ )
 	{
